# scaffold

./: AGENTS.md  LICENSE  README.md  cookiecutter.json
.claude/: settings.local.json
.github/: COMMIT_TEMPLATE.txt  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  behave.ini  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: COMMIT_TEMPLATE.txt  PULL_REQUEST_TEMPLATE.md  README.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/alembic/versions/: .gitkeep  000_create_examples_table.py  001_create_users_table.py
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/api/: deps.py
{{cookiecutter.project_slug}}/app/api/v1/: router.py
{{cookiecutter.project_slug}}/app/api/v1/endpoints/: auth.py  example.py  example_cached.py
{{cookiecutter.project_slug}}/app/core/: celery_app.py  config.py  database.py  security.py
{{cookiecutter.project_slug}}/app/crud/: __init__.py  example.py  user.py
{{cookiecutter.project_slug}}/app/models/: example.py  user.py
{{cookiecutter.project_slug}}/app/schemas/: auth.py  example.py  pagination.py
{{cookiecutter.project_slug}}/app/tasks/: example.py
{{cookiecutter.project_slug}}/features/: environment.py  example.feature  integration_auth.feature  integration_celery.feature  integration_db.feature  integration_redis.feature
{{cookiecutter.project_slug}}/features/steps/: __init__.py  example_steps.py  integration_auth_steps.py  integration_celery_steps.py  integration_db_steps.py  integration_redis_steps.py
{{cookiecutter.project_slug}}/scripts/: __init__.py  init_db.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py  test_integration_celery.py  test_integration_db.py  test_integration_redis.py
