[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
{% if cookiecutter.use_postgresql == "yes" -%}
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
{% endif -%}
celery = "^5.3.4"
{% if cookiecutter.use_redis == "yes" -%}
redis = "^5.0.1"
{% endif -%}
{% if cookiecutter.include_auth == "yes" -%}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
{% endif -%}
httpx = "^0.26.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
behave = "^1.2.6"
ruff = "^0.1.14"
mypy = "^1.8.0"
bandit = "^1.7.6"
pre-commit = "^3.6.0"
httpx = "^0.26.0"
import-linter = "^2.0"

[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "features"]
skips = ["B101"]

[tool.importlinter]
root_package = "app"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layer independence"
type = "layers"
layers = [
    "app.api",
    "app.schemas | app.crud",
    "app.models | app.core",
]

[[tool.importlinter.contracts]]
name = "No circular dependencies"
type = "independence"
modules = [
    "app.api",
    "app.crud",
    "app.models",
    "app.schemas",
    "app.tasks",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
